--- a/src/main/resources/templates/approval/write.html
+++ b/src/main/resources/templates/approval/write.html
@@ -22,7 +22,7 @@
                     
                     <li class="title">
                         <label th:for="appTitle">제목</label>
-                        <input type="text" th:field="*{appTitle}" placeholder="제목을 입력하세요.">
+                        <input type="text" th:field="*{appTitle}" placeholder="제목을 입력하세요." style="width:300px;">
                     </li>
     
                     <li class="content">
