--- a/src/main/resources/static/css/approval/write.css
+++ b/src/main/resources/static/css/approval/write.css
@@ -54,7 +54,7 @@
 }
 
 .container .approvalWrite ul{
-  border: 1px solid black;
+  border: 1px solid #4d4d4d3a;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -63,7 +63,7 @@
 .container .approvalWrite ul li{
   /* border: 1px solid #00ff00; */
   padding: 10px 10px;
-  border-bottom: 1px solid #222;
+  /* border-bottom: 1px solid #222; */
 }
 
 .container .approvalWrite ul li label{
