--- a/src/main/resources/templates/approval/listUpdate.html
+++ b/src/main/resources/templates/approval/listUpdate.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>결재문서 수정</title>
@@ -12,44 +13,53 @@
         <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
         <div class="approvalUpdate">
             <h2>결재문서 수정</h2>
-            <form th:action="@{/approval/listUpdate}" method="POST" th:object="${approvalDto}" enctype="multipart/form-data">
-                <ul>
-                    <li class="division">
-                        <label th:for="appDivision">구분</label>
-                        <select name="appDivision" id="appDivision">
-                        <option value="expend">지출결의서</option>
-                        <option value="draft">기안서</option>
-                        </select>
-                    </li>
+            <div class="con">
+                <div class="con2">
+                    <div class="con3">
+                        <form th:action="@{/approval/listUpdate}" method="POST" th:object="${approvalDto}"
+                            enctype="multipart/form-data">
+                            <ul>
+                                <li class="division">
+                                    <label th:for="appDivision">구분</label>
+                                    <select name="appDivision" id="appDivision">
+                                        <option value="expend">지출결의서</option>
+                                        <option value="draft">기안서</option>
+                                    </select>
+                                </li>
 
-                    <li class="title">
-                        <label th:for="appTitle">제목</label>
-                        <input type="text" name="appTitle" th:value="${approval.appTitle}">
-                        <input type="hidden" name="appId" th:value="${approval.appId}">
-                    </li>
+                                <li class="title">
+                                    <label th:for="appTitle">제목</label>
+                                    <input type="text" name="appTitle" th:value="${approval.appTitle}" style="width:300px;">
+                                    <input type="hidden" name="appId" th:value="${approval.appId}">
+                                </li>
 
-                    <li class="content">
-                        <label th:for="appContent">내용</label> <br>
-                        <textarea name="appContent" id="appContent" th:text="${approval.appContent}" th:value="${approval.appContent}" cols="70" rows="10" ></textarea>
-                    </li>
+                                <li class="content">
+                                    <label th:for="appContent">내용</label> <br>
+                                    <textarea name="appContent" id="appContent" th:text="${approval.appContent}"
+                                        th:value="${approval.appContent}" cols="70" rows="10"></textarea>
+                                </li>
 
-                    <li class="approver">
-                        <label th:for="approverEmail">결재자 입력(이메일)</label>
-                        <input type="email" th:value="${approval.approverEmail}" placeholder="이메일을 입력하세요.">
-                    </li>
+                                <li class="approver">
+                                    <label th:for="approverEmail">결재자 입력(이메일)</label>
+                                    <input type="email" th:value="${approval.approverEmail}" placeholder="이메일을 입력하세요.">
+                                </li>
 
-                    <li class="file">
-                        <label th:for="appContainer">첨부파일</label>
-                        <input type="file" name="appContainer" th:value="${approval.appContainer}">
-                    </li>
+                                <li class="file">
+                                    <label th:for="appContainer">첨부파일</label>
+                                    <input type="file" name="appContainer" th:value="${approval.appContainer}">
+                                </li>
 
-                    <li class="submit">
-                        <input type="submit" value="문서 수정">
-                        <a th:href="@{|/approval/listDetail/${approval.appId}|}">이전</a>
-                    </li>
-                </ul>
-            </form>
+                                <li class="submit">
+                                    <input type="submit" value="문서 수정">
+                                    <a th:href="@{|/approval/listDetail/${approval.appId}|}">이전</a>
+                                </li>
+                            </ul>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
